<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tab1Fragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/totalBillLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/totalBillLabelText"
        app:layout_constraintStart_toEndOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/guideline7" />

    <EditText
        android:id="@+id/totalBillInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalBillLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tipPercentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/tipPercentLabelText"
        app:layout_constraintStart_toEndOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/totalBillLabel" />

    <EditText
        android:id="@+id/tipPercentInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tipPercentLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/peopleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/peopleLabelText"
        app:layout_constraintStart_toEndOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/tipPercentLabel" />

    <EditText
        android:id="@+id/peopleInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/peopleLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/calculateTipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/calculateButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateTipButton" />

</android.support.constraint.ConstraintLayout>