<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tab2Fragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/milesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/milesLabelText"
        app:layout_constraintStart_toEndOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/guideline5" />

    <EditText
        android:id="@+id/milesInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/milesLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/kilometersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/kilometersLabelText"
        app:layout_constraintStart_toEndOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/milesLabel" />

    <EditText
        android:id="@+id/kilometersInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/kilometersLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/convertDistButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/convertButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

</android.support.constraint.ConstraintLayout>