<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tab3Fragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/fahrenheitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fahrenheitLabelText"
        app:layout_constraintStart_toEndOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/guideline3" />

    <EditText
        android:id="@+id/fahrenheitInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fahrenheitLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/celsiusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/celsiusLabelText"
        app:layout_constraintStart_toEndOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/fahrenheitLabel" />

    <EditText
        android:id="@+id/celsiusInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/celsiusLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/convertTempButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/convertButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

</android.support.constraint.ConstraintLayout>